<resources>
    <string name="app_name">PokemonApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_text">100 more</string>
    <string name="pokemon_image">Pokemon picture\n</string>
    <string name="abilities">Abilities\n</string>
    <string name="moves">Moved\n</string>
    <string name="show_n_more">Show %s more\n</string>
    <string name="pokemon_stats">Stats</string>
    <string name="pokemon_types">Elements</string>
    <string name="language_label">Select Language</string>
    <string name="language_english">English</string>
    <string name="language_russian">Русский</string>
    <string name="settings">Settings</string>
    <string name="night_theme">Night / Day mode</string>
    <string name="select_language">Select Language</string>
    <string name="change_toolbar_color">Dark - light toolbar</string>
    <string name="delete_pok_mon_file">Delete Pokémon File</string>
    <string name="restore_ma_pokems">Restore ma pokems</string>
    <string name="poke_edit_btn">poke edit btn</string>
    <string name="pocke_name">Pocke Name</string>
    <string name="update_poke">UPDATE POKE</string>
    <string name="delete_poke">DELETE POKE!!!</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
</resources>