<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Pokémon Image -->
        <ImageView
            android:id="@+id/pokemon_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/pokemon_image"
            android:layout_gravity="center"/>

        <!-- Pokémon Name -->
        <TextView
            android:id="@+id/pokemon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleLarge"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_stats"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/pokemon_stats"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_types"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:id="@+id/pokemon_types"
            android:visibility="gone"/>

        <!-- Pokémon Abilities -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abilities"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/ability_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="gone"/>

        <!-- Pokémon Moves -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/move_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>